# LiteClaw

./: .env.example  .gitignore  AGENT.md  CHANNELS.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SOUL.md  auth.json  auth.json.bak  config.json.reset  config_testing2.json  configure.py  onboarding.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
docs/: HUMAN_IN_THE_LOOP.md
scripts/: test_vision_coords.py  validate.py  vision_agent.py
src/liteclaw/: AGENT.md  CONSCIOUS.md  HEARTBEAT.md  LEARNING.md  PERSONALITY.md  SOUL.md  SUBCONSCIOUS.md  __init__.py  agent.py  browser_utils.py  cli.py  config.py  config_random.json  conscious.py  db.py  heartbeat.py  llm.py  main.py  memory.py  meta_memory.py  onboarding.py  scheduler.py  selenium_whatsapp.py  subagent.py  subconscious.py  tools.py  vision_agent.py  web_utils.py  whatsapp_client.py
src/liteclaw/bridge/: index.js  package-lock.json  package.json
src/liteclaw/bridge/.wwebjs_cache/: 2.3000.1032760446.html  2.3000.1032761239.html  2.3000.1032762111.html  2.3000.1032763832.html
whatsapp_bridge/: index.js  package-lock.json  package.json
